show/css/style.css
/* ... */
.btn-warning:hover, .btn-warning:focus, .btn-warning:active {
  background: #eea236 !important;
  border-color: #eea236 !important;
}
.btn-warning.btn-outline {
  background: transparent;
  color: #f0ad4e;
  border: 2px solid #f0ad4e;
}
.btn-warning.btn-outline:hover, .btn-warning.btn-outline:focus, .btn-warning.btn-outline:active {
  background: #f0ad4e;
  color: #fff;
}

.btn-danger {
  background: #d9534f;
  color: #fff;
  border: 2px solid #d9534f;
}
.btn-danger:hover, .btn-danger:focus, .btn-danger:active {
  background: #d43f3a !important;
  border-color: #d43f3a !important;
}
.btn-danger.btn-outline {
  background: transparent;
  color: #d9534f;
  border: 2px solid #d9534f;
}
.btn-danger.btn-outline:hover, .btn-danger.btn-outline:focus, .btn-danger.btn-outline:active {
  background: #d9534f;
  color: #fff;
}

.btn-outline {
  background: none;
  border: 2px solid gray;
  font-size: 16px;
  -webkit-transition: 0.3s;
  -o-transition: 0.3s;
  transition: 0.3s;
}
.btn-outline:hover, .btn-outline:focus, .btn-outline:active {
  box-shadow: none;
}

.btn.with-arrow {
  position: relative;
  -webkit-transition: 0.3s;
  -o-transition: 0.3s;
  transition: 0.3s;
}
.btn.with-arrow i {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  right: 0px;
  top: 50%;
  margin-top: -8px;
  -webkit-transition: 0.2s;
  -o-transition: 0.2s;
  transition: 0.2s;
}
.btn.with-arrow:hover {
  padding-right: 50px;
}
.btn.with-arrow:hover i {
  color: #fff;
  right: 18px;
  visibility: visible;
  opacity: 1;
}

.form-control {
  box-shadow: none;
  background: transparent;
  border: 2px solid rgba(0, 0, 0, 0.1);
  height: 54px;
  font-size: 18px;
  font-weight: 300;
  -webkit-border-radius: 0px;
  -moz-border-radius: 0px;
  -ms-border-radius: 0px;
  border-radius: 0px;
}
.form-control:active, .form-control:focus {
  outline: none;
  box-shadow: none;
  border-color: #52d3aa;
}

.cursive-font {
  font-family: "Bungee Shade", cursive;
}

.row-pb-md {
  padding-bottom: 3em;
}

.js .animate-box {
  opacity: 0;
}


/*  
	custom CSS added by Bisrat   
*/

.div-no-wrap
{
	white-space: nowrap;
}

pre
{
	font-family: "Varela Round", Arial, sans-serif;
	font-weight: 400;
	font-size: 15px;
	background-attachment: fixed;
	background-repeat: none;
	background-color: #FFFEFF;
}

.btn-biography {
	background: #52d3aa;
	color: #fff;
	border: 1px solid #52d3aa;
	background-color: #FFFFFF;
	focus: 50;
}

.bookSectionDiv
{
	font-family: "Varela Round", Arial, sans-serif;
	font-weight: 400;
	font-size: 15px;
	display: block;
	border: 1px solid #D5D8DC; 
	text-align: left;
	border-radius: 10px;
	background-attachment: none;
	background-repeat: no-repeat;
	background-color: white; 
	background-size:contain;
	border-bottom-color: green;
	border-bottom-width: thick;
	width: 100%;
	box-shadow: 1px 1px 30px 0px black;
	overflow:hidden;
}

a
{
	text-decoration: none;
}
.divMenu
{
	display: inline-block;
	white-space: nowrap;
	position: fixed;
	margin-left: 320px;
	margin-top: 25px;
	z-index: 100;
	transition: 0.5s;
	box-shadow: 8px 8px 10px 0px black;	
}

.book-tile
{
	display: table;
	margin-top: 60px; 
	width: 966px; 
	height: 1256px; 
	border: 0;
}

.book-tile-row
{
	display: table-row;
}

.book-tile-cell
{
	display: table-cell;
	padding: 6px;
	border: 0px;
}


th, td
{
	padding: 10px;
	border: 0px;
}

.book-description
{
	font-family: "Varela Round", Arial, sans-serif; 
	font-size: 15px; 
	margin-top: 1em;
	margin-left: 3em;	
	width: 100%; 
	text-align: justify;
	padding: 10px;
}

/*scroll button display property */
#goToTop
{
  height: 50px;
  position:fixed; 
  right: 5%; 
  bottom: 10%; 
  padding: 5px; 
  margin: 5px; 
  z-index: 1000; 
  float: right; 
  display: none;
}

/*
#content-desktop {display: block;}
#content-mobile {display: none;}

@media screen and (max-width: 768px) {

#content-desktop {display: none;}
#content-mobile {display: block;}

}
*/

/* Image overlay CSS */
/*
.bookContainer {
  position: relative;
  width: 50%;
}

.bookImage {
  display: block;
  width: 100%;
  height: auto;
}

.bookOverlay {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  height: 100%;
  width: 100%;
  opacity: 0;
  transition: .5s ease;
  background-color: #008CBA;
}

.bookContainer:hover .bookOverlay {
  opacity: 1;
}

.bookText 
{
  color: white;
  position: absolute;
  -webkit-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(100%, 200%);
  text-align: center;
}
*/

/* ============================================================
   DESKTOP MINIMUM WIDTH
   The header layout was designed for 960px+. On desktop, enforce
   a minimum so the layout holds rather than squishing. Below 768px
   (phones/tablets), the responsive layout below takes over instead.
   ============================================================ */
@media screen and (min-width: 769px) {
  body {
    min-width: 960px;
  }
  /* Profile picture: fixed size, does not shrink on desktop */
  #fh5co-header img[alt="Tafesse Muluneh profile picture"] {
    width: 250px;
    min-width: 220px;
  }
}
/* ... */

